# simple_emacs_config

./: .gitignore  .mc-lists.el  .pre-commit-config.yaml  common-mail-config.el.gpg  config.org  custom.el  early-init.el  init.el
auto-insert/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.txt  plantuml.puml  protobuf-file.proto  qmldir
local/: README.org  go-integration.el  janus.el  squish-feature.el  squishrunner.el
org-mode-setup/: new_task.org
snippets/cc-mode/: copyright  ife  mex  mex.1  switch
snippets/cmake-mode/: act  ae  al  as  cmake  conan  debug  file  fp  id  ld  min  opt  opt.1  psd  set  stp  tid  tll
snippets/go-ts-mode/: pln
snippets/html-mode/: faal  faar  falb  farh
snippets/latex-mode/: ^  _  ac  brackets  command_undefined  curly_brackets  def  def.1  def.2  fig  floor  frac  frame  mat  ola  parenthesis  redline  sqrt  sum  tikz_external_preamble  tikz_include_file  tikzset  usetikzlibrary  vec
snippets/makefile-mode/: Makefile
snippets/markdown-mode/: meta  src
snippets/matlab-mode/: classdef  for  function  if  methods  properties  soclass  switch
snippets/org-mode/: #+ATTR_HTML  #+ATTR_LATEX  #+ATTR_ORG  #+ATTR_REVEAL  #+ATTR_REVEAL_with_frag  #+ATTR_REVEAL_with_frag.1  Rightarrow  SI  begin  beginequation  ca  capitalRightarrow  columns  ditaa  elisp  finanças  frac  mathdisplay  mathinline  rightarrow  setuporg  thead  times  widehat  wr
snippets/prog-mode/: impme  mitlic
snippets/python-mode/: apf  def  (+14 more)
user-lisp/: .user-lisp-autoloads.el  squish-feature.el  squish-feature.elc  squishrunner.elc
(+48 files in other folders)
